- remove deprecated code